trunk/Archive2/5f/69c88bef70f49c/output
main.cpp:6:1: error: 'cin' does not name a type
 cin>>k;
 ^
main.cpp:7:1: error: 'cout' does not name a type
 cout<<"calcolare i primi multipli di k";
 ^
main.cpp:9:1: error: expected unqualified-id before 'if'
 if(k%2==0)
 ^
