trunk/Archive2/5f/69c88bef70f49c/main.cpp
#include <iostream>
#include <cstdlib>
using namespace std;

int k;
cin>>k;
cout<<"calcolare i primi multipli di k";

if(k%2==0)
